feat: update danji to reflect erd changes for normalization